gke-ingress-context-path-routing/kube-manifest/02-Nginx-app-deployment-nodeport-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  labels:
    app: app2-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
        - name: app2-nginx
          image: stacksimplify/kube-nginxapp2:1.0.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: app2-nginx-nodeport-service
  labels:
    app: app2-nginx
spec:
  type: NodePort 
  selector:
    app: app2-nginx
  ports:
    - port: 80
      targetPort: 80
