gke-ingress-context-path-routing/kube-manifest/04-Ingress-context-path-based-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations:
    # External Load Balancer  
    kubernetes.io/ingress.class: "gce" 
spec:
  defaultBackend:
    service:
      name: app3-nginx-nodeport-service
      port:
        number: 80
  rules:
    - http:
       paths:
        - backend:
            service:
              name: app1-nginx-nodeport-service
              port:
                number: 80
          path: /app1
          pathType: Prefix
        - backend:
           service:
            name: app2-nginx-nodeport-service
            port:
                number: 80
          path: /app2
          pathType: Prefix
